--- a/css/style.css
+++ b/css/style.css
@@ -941,6 +941,10 @@ body {
 
 @media only screen and (max-width: 425px) {
 
+    .content-video-list-content {
+        margin-top: 20px;
+    }
+
     .content-video-list-content-des-title {
         font-size: 9px !important;
         margin-top: 0;
@@ -1113,7 +1117,7 @@ body {
     .content-video-list-content-des-information {
         position: absolute;
         margin-left: 0;
-        margin-top: 50px;
+        margin-top: 40px;
     }
 
     .content-video-list-content-des-des {
